# MAI_OOP_Lab5

./: CMakeLists.txt
includes/allocators/: dynamic_allocator.hpp
includes/vector/: vector.hpp  vector.ipp  vector_exceptions.hpp
src/allocators/: CMakeLists.txt  allocator_test.cpp  dynamic_allocator.cpp
src/vector/: CMakeLists.txt  iterator_test.cpp  vector_test.cpp
